# reasonkit-mem

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  labeler.yml  security.yml  stale.yml
benches/: rerank_bench.rs  storage_bench.rs
docs/: ARCHITECTURE.md  COLD_MEMORY_DESIGN.md  DUAL_LAYER_STORAGE_API_DESIGN.md  DUAL_LAYER_STORAGE_ARCHITECTURE.md  EMBEDDED_MODE_GUIDE.md  EMBEDDING_PIPELINE_GUIDE.md  HYBRID_SEARCH_GUIDE.md  MEMORY_ARCHITECTURE_2025.md  RAPTOR_TREE_GUIDE.md  STORAGE_API.md  data_models.md  persistence.md
examples/: hybrid_search.rs
src/: error.rs  lib.rs  service.rs  types.rs
src/embedding/: local.rs
src/indexing/: mod.rs
src/raptor/: mod.rs  optimized.rs
src/retrieval/: rerank.rs
src/storage/: cold.rs  config.rs  context.rs  dual_layer.rs  hot.rs  memory_types.rs  mod.rs  serde_utils.rs  sync_worker.rs  vector_ops.rs  wal.rs
src/vdreamteam/: mcp_server.rs  mod.rs
tests/: crash_recovery_tests.rs  integration.rs  lib_integration_tests.rs  storage_comprehensive_tests.rs  vdreamteam_integration_tests.rs
