[package]
name = "reasonkit-mem"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["ReasonKit Team <hello@reasonkit.sh>"]
description = "Memory & Retrieval Infrastructure for ReasonKit - Vector storage, hybrid search, RAPTOR trees"
license = "Apache-2.0"
repository = "https://github.com/reasonkit/reasonkit-mem"
homepage = "https://reasonkit.sh"
documentation = "https://docs.rs/reasonkit-mem"
readme = "README.md"
keywords = ["rag", "vector-database", "retrieval", "embeddings", "raptor"]
categories = ["science", "text-processing", "database"]

[lib]
name = "reasonkit_mem"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "raptor_bench"
harness = false

[[bench]]
name = "embedding_bench"
harness = false

[[bench]]
name = "fusion_bench"
harness = false

[[bench]]
name = "rerank_bench"
harness = false

[dependencies]
# Python Bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Vector Database (Qdrant)
qdrant-client = "1.10"

# Full-text Search (Tantivy BM25)
tantivy = "0.22"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client (for Qdrant health checks)
reqwest = { version = "0.12", features = ["json"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptographic hashing for caching
sha2 = "0.10"

# Rayon for parallel processing
rayon = "1.10"

# Directories (for default paths)
dirs = "5"

# ONNX Runtime for local embeddings (BGE-M3)
ort = { version = "2.0.0-rc.10", optional = true }

# HuggingFace tokenizers
tokenizers = { version = "0.19", optional = true }

# NDArray for tensor operations
ndarray = { version = "0.16", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
default = []
python = ["pyo3"]
local-embeddings = ["ort", "tokenizers", "ndarray"]
