[package]
name = "reasonkit-mem"
version = "0.1.2"
edition = "2021"
rust-version = "1.74"
authors = ["ReasonKit Team <team@reasonkit.sh>"]
description = "High-performance vector database & RAG memory layer - hybrid search, embeddings, RAPTOR trees, BM25 fusion, and semantic retrieval for AI systems"
license = "Apache-2.0"
repository = "https://github.com/reasonkit/reasonkit-mem"
homepage = "https://reasonkit.sh"
documentation = "https://docs.rs/reasonkit-mem"
readme = "README.md"
keywords = ["vector-database", "rag", "embeddings", "semantic-search", "retrieval"]
categories = ["database", "science", "data-structures", "algorithms"]

# Explicit include list for crates.io package
include = [
    "/src/**/*",
    "/benches/**/*",
    "/examples/**/*",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/SECURITY.md",
]

# Exclude patterns for safety
exclude = [
    "/docs/**/*",
    "/target/**/*",
    "*.png",
    "*.svg",
    "*.jpg",
    "*.gif",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
cargo-args = ["--locked"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "reasonkit_mem"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# ============================================================================
# BENCHMARKS
# ============================================================================

[[bench]]
name = "raptor_bench"
harness = false

[[bench]]
name = "embedding_bench"
harness = false

[[bench]]
name = "fusion_bench"
harness = false

[[bench]]
name = "rerank_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

# ============================================================================
# DEPENDENCIES
# ============================================================================

[dependencies]
# Python Bindings (optional)
pyo3 = { version = "0.24.1", features = ["extension-module"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Binary serialization (faster than JSON for embeddings)
bincode = "1.3"

# MessagePack serialization (compact binary format)
rmp-serde = "1.3"

# Vector Database (Qdrant)
qdrant-client = "1.10"

# Full-text Search (Tantivy BM25)
tantivy = "0.22"

# Embedded key-value store (pure Rust)
sled = "0.34"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client (for Qdrant health checks)
reqwest = { version = "0.12", features = ["json"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptographic hashing for caching
sha2 = "0.10"

# Hex encoding for hash output
hex = "0.4"

# CRC32 checksum
crc32fast = "1.4"

# Rayon for parallel processing
rayon = "1.10"

# Concurrent data structures
dashmap = "5.5"

# CPU detection for optimal shard count
num_cpus = "1.16"

# Atomic types
crossbeam-utils = "0.8"

# Directories (for default paths)
dirs = "5"

# ONNX Runtime for local embeddings (BGE-M3)
ort = { version = "2.0.0-rc.10", optional = true }

# HuggingFace tokenizers
tokenizers = { version = "0.19", optional = true }

# NDArray for tensor operations
ndarray = { version = "0.16", optional = true }

# LZ4 compression (optional, for dual-layer memory)
lz4_flex = { version = "0.11", optional = true }

# ============================================================================
# DEV DEPENDENCIES
# ============================================================================

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"

# ============================================================================
# FEATURES
# ============================================================================

[features]
# Default: minimal feature set for library use
default = []

# Python bindings via PyO3
python = ["pyo3"]

# Local BGE-M3 ONNX embeddings (no API calls needed)
local-embeddings = ["ort", "tokenizers", "ndarray"]

# LZ4 compression for dual-layer memory architecture
compression = ["lz4_flex"]

# Full feature set
full = ["python", "local-embeddings", "compression"]
